Fixed alignment

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
   gap: 20px;
   padding: 40px;
   max-width: 1000px;
-  margin: auto;
+  margin: 0 auto 0 0;
 }
 
 .project-tile {
